# mattermost-mail

./: .env.dist  README.md  main.py  pyproject.toml  requirements.txt
